--- a/proj.android/AndroidManifest.xml
+++ b/proj.android/AndroidManifest.xml
@@ -9,9 +9,6 @@
 
     <application android:label="@string/app_name"
                  android:icon="@drawable/icon">
-        <meta-data android:name="com.google.android.gms.version"
-           android:value="@integer/google_play_services_version" />
-
         <activity android:name="org.cocos2dx.lua.Cocos2dxActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
@@ -29,10 +26,10 @@
         </activity>       
 
         
-        <activity
-            android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize">
-        </activity>
+        <meta-data android:name="com.google.android.gms.version"
+               android:value="@integer/google_play_services_version"/>
+		<activity android:name="com.google.android.gms.ads.AdActivity"
+         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
     </application>
 
     <supports-screens android:anyDensity="true"
