--- a/proj.android/AndroidManifest.xml
+++ b/proj.android/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-feature android:glEsVersion="0x00020000" />
 
     <application android:label="@string/app_name"
-                 android:icon="@drawable/icon_launcher">
+                 android:icon="@drawable/ic_launcher">
         <activity android:name="org.cocos2dx.lua.Cocos2dxActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
