--- a/proj.win32/FlappyBird.vcxproj.filters
+++ b/proj.win32/FlappyBird.vcxproj.filters
@@ -10,6 +10,9 @@
     <Filter Include="resource">
       <UniqueIdentifier>{2d1d0979-58cd-4ab6-b91c-13650158f1fa}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Classes\LuaInterface">
+      <UniqueIdentifier>{774dfd76-552f-4345-8f45-738b4b5463e6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h">
@@ -21,6 +24,12 @@
     <ClInclude Include="..\Classes\AdmobHelper.h">
       <Filter>Classes</Filter>
     </ClInclude>
+    <ClInclude Include="..\Classes\LuaInterface\lua_tinker.h">
+      <Filter>Classes\LuaInterface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\LuaInterface\luaconf.h">
+      <Filter>Classes\LuaInterface</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp">
@@ -31,6 +40,9 @@
     </ClCompile>
     <ClCompile Include="..\Classes\AdmobHelper.cpp">
       <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\LuaInterface\lua_tinker.cpp">
+      <Filter>Classes\LuaInterface</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
